<resources>
    <string name="app_name">Work parts</string>
    <string name="tab_text_1">Works</string>
    <string name="tab_text_2">Employees</string>
    <string name="nombre">Name</string>
    <string name="email">Email</string>
    <string name="contrase_a">Password</string>
    <string name="register">Register</string>
    <string name="company_name">Company name</string>
    <string name="company_email">Company email</string>
    <string name="company_registration">Company registration</string>
    <string name="employee_entrance">Employee entrance</string>
    <string name="company_entrance">Company entrance</string>
    <string name="enter_data">Enter the data correctly</string>
    <string name="register_company">Сompany registration</string>
    <string name="сompany_login">Company login</string>
    <string name="logout">Go out</string>
    <string name="new_employee">New employee</string>
    <string name="new_work">New work</string>
    <string name="error_ocurried">An error occurred</string>
    <string name="create_new_worker">Сreate a new employee</string>
    <string name="enter_data_new_employeer">Enter the details of the new employee</string>
    <string name="emploeer_name">Employee name</string>
    <string name="emploeer_email">Employee email</string>
    <string name="employee_password">Employee password</string>
    <string name="create_employee">Сreate an employee</string>
    <string name="legenda">After creating a job object and creating an employee, the employee must download this app to their phone, log in through the employee login with the credentials you specified. Then the employee can specify his or her daily activities and all this will be reflected in your phone</string>
    <string name="employee_create">The employee is created</string>
    <string name="user_exist">A user with such a mail already exists</string>
    <string name="create_new_workr">Create a new job</string>
    <string name="enter_data_new_job">Enter details of the new job</string>
    <string name="job_name">Title of work</string>
    <string name="job_direction">Address of work</string>
    <string name="create_job">Сreate a job</string>
    <string name="job_create">The job created</string>
    <string name="employee_login">Entrance for employee</string>
    <string name="empl_login">Employee login</string>
    <string name="employee_email">Employee enail</string>
    <string name="password">Password</string>
    <string name="employee_dont_found">Worker not found</string>
    <string name="you_are_employee_login">You are logged in as an employee</string>
    <string name="you_are_company_login">You are logged as a company</string>
    <string name="dont_have_workd">No work found</string>
    <string name="your_do">What do you want</string>
    <string name="list_parts">List of working parts</string>
    <string name="create_part">Create new work part</string>
    <string name="cancel_option">Cancel</string>
    <string name="nan">" "</string>
    <string name="part_create">Create</string>
    <string name="change">change</string>
    <string name="details">Details</string>
    <string name="work_done">Work done</string>
    <string name="spent_time">Spent time</string>
    <string name="kilometers_traveled">Kilometers traveled</string>
    <string name="consumption">Consumption</string>
    <string name="comment">Comment</string>
    <string name="working_time">Working time</string>
    <string name="new_part">create new part</string>
    <string name="_0">0</string>
    <string name="date">Date</string>
    <string name="new_past_saved">The new part saved</string>
    <string name="item_hours">h</string>
    <string name="item_cost">$</string>
    <string name="item_km">km</string>
    <string name="show_part">Show details</string>
    <string name="edit_part">Edit</string>
    <string name="delete_part">Delete part</string>
    <string name="delete_this_part">Delete this part</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="part_deleted">This part deleted</string>
    <string name="save">Save</string>
    <string name="part_edited">This part edited and saved</string>
    <string name="show_resume_work">Working results</string>
    <string name="work_parts">Working parts</string>
    <string name="delete_work_and_parts">Delete work and parts</string>
    <string name="conclusion">Conclusion</string>
    <string name="total_parts">Number of parts</string>
    <string name="total_hours">Number of hours</string>
    <string name="total_km">Number of kilometres</string>
    <string name="total_expenses">All expenses $</string>
    <string name="delete_this_work">Delete this work</string>
    <string name="deleted">removed</string>
    <string name="delete_user">Delete empoyee</string>
    <string name="send">Share</string>
    <string name="employee">Employee</string>
    <string name="delete_employee">Delete employee</string>
    <string name="employee_deleted">Employee removed</string>
    <string name="file_csv" translatable="false">File.csv</string>
    <string name="file_txt" translatable="false">File.txt</string>
</resources>