<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/date_item_company"
            android:gravity="center"
            android:textColor="@color/grey"
            android:maxLines="1"
            android:layout_marginEnd="5dp"
            android:text="@string/date"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:id="@+id/employee_name_company"
            android:text="@string/emploeer_name"
            android:textSize="15sp"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/work_done_company"
        android:textColor="@color/grey"
        android:layout_marginEnd="5dp"
        android:text="@string/work_done"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/comment_company"
        android:textColor="@color/grey"
        android:layout_marginEnd="5dp"
        android:text="@string/comment"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="11dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_hours_company"
            android:gravity="center"
            android:textColor="@color/grey"
            android:maxLines="1"
            android:layout_marginEnd="5dp"
            android:text="@string/item_hours"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/item_cost_company"
            android:gravity="center"
            android:textColor="@color/grey"
            android:maxLines="1"
            android:layout_marginEnd="5dp"
            android:text="@string/item_cost"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/item_km_company"
            android:gravity="center"
            android:textColor="@color/grey"
            android:maxLines="1"
            android:text="@string/item_km"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>