<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@drawable/company_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_login.RegisterCompanyActivity">

    <LinearLayout
        android:id="@+id/menu_register"
        android:background="@drawable/layout_bg"
        android:layout_margin="22dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/register_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="18sp"
            android:layout_marginTop="44dp"
            android:inputType="text"
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/company_name"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            />
        <EditText
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:id="@+id/company_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/company_email"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <EditText
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:id="@+id/company_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/contrase_a"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <Button
            android:textAllCaps="false"
            android:backgroundTint="@color/gris"
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_registration"
            android:textColor="@color/white"
            android:layout_marginTop="64dp"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="11dp"
            android:backgroundTint="@color/gris"
            android:id="@+id/company_entrance"
            android:text="@string/company_entrance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:textAllCaps="false"
        android:layout_marginTop="33dp"
        android:backgroundTint="@color/purple_200"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_below="@+id/menu_register"
        android:id="@+id/worker_enter"
        android:text="@string/employee_entrance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>