<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/layout_bg"
        android:layout_margin="22dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_create_part"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/data_time"
            android:layout_marginEnd="11dp"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,LabelFor,TextFields"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/working_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/time_hours"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,LabelFor,TextFields"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <EditText
            android:id="@+id/work_done"
            android:minLines="4"
            android:maxLines="5"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/work_done"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <EditText
            android:id="@+id/comments"
            android:minLines="4"
            android:maxLines="5"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/comment"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/kilometers_traveled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/kilometers_traveled"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,LabelFor,TextFields"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/consumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/consumption"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,LabelFor,TextFields"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <Button
            android:id="@+id/create_part"
            android:textAllCaps="false"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/gris"
            android:text="@string/part_create"
            android:layout_marginBottom="44dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>