<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/layout_bg"
        android:layout_margin="22dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_part_show"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/data_time_show"
            android:layout_marginEnd="11dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/working_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/time_hours_show"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <TextView
            android:id="@+id/work_done_show"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <TextView
            android:id="@+id/comments_show"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/kilometers_traveled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/kilometers_traveled_show"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <TextView
            android:layout_marginTop="44dp"
            android:textSize="15sp"
            android:textColor="@color/gris"
            android:text="@string/consumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/consumption_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="44dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>